--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -1,7 +1,35 @@
-[core]
-# The home folder for airflow, default is ~/airflow
-airflow_home = /usr/local/airflow
+# -*- coding: utf-8 -*-
+#
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
 
+
+# This is the template for Airflow's default configuration. When Airflow is
+# imported, it looks for a configuration file at $AIRFLOW_HOME/airflow.cfg. If
+# it doesn't exist, Airflow uses this template to generate it by replacing
+# variables in curly braces with their global values from configuration.py.
+
+# Users should not modify this file; they should customize the generated
+# airflow.cfg instead.
+
+
+# ----------------------- TEMPLATE BEGINS HERE -----------------------
+
+[core]
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository
 # This path must be absolute
@@ -31,7 +59,11 @@ fab_logging_level = WARN
 logging_config_class =
 
 # Log format
-# we need to escape the curly braces by adding an additional curly brace
+# Colour the logs when the controlling terminal is a TTY.
+colored_console_log = True
+colored_log_format = [%%(blue)s%%(asctime)s%%(reset)s] {{%%(blue)s%%(filename)s:%%(reset)s%%(lineno)d}} %%(log_color)s%%(levelname)s%%(reset)s - %%(log_color)s%%(message)s%%(reset)s
+colored_formatter_class = airflow.utils.log.colored_log.CustomTTYColoredFormatter
+
 log_format = [%%(asctime)s] {{%%(filename)s:%%(lineno)d}} %%(levelname)s - %%(message)s
 simple_log_format = %%(asctime)s %%(levelname)s - %%(message)s
 
@@ -42,6 +74,10 @@ log_processor_filename_template = {{ filename }}.log
 dag_processor_manager_log_location = /usr/local/airflow/logs/dag_processor_manager/dag_processor_manager.log
 
 # Hostname by providing a path to a callable, which will resolve the hostname
+# The format is "package:function". For example,
+# default value "socket:getfqdn" means that result from getfqdn() of "socket" package will be used as hostname
+# No argument should be required in the function specified.
+# If using IP address as hostname is preferred, use value "airflow.utils.net:get_host_ip_address"
 hostname_callable = socket:getfqdn
 
 # Default timezone in case supplied date times are naive
@@ -49,23 +85,33 @@ hostname_callable = socket:getfqdn
 default_timezone = utc
 
 # The executor class that airflow should use. Choices include
-# SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor
+# SequentialExecutor, LocalExecutor, CeleryExecutor, DaskExecutor, KubernetesExecutor
 executor = SequentialExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-# sql_alchemy_conn = sqlite:////tmp/airflow.db
-
-# If SqlAlchemy should pool database connections.
-sql_alchemy_pool_enabled = True
+sql_alchemy_conn = sqlite:///{AIRFLOW_HOME}/airflow.db
 
 # The encoding for the databases
 sql_engine_encoding = utf-8
 
+# If SqlAlchemy should pool database connections.
+sql_alchemy_pool_enabled = True
+
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool. 0 indicates no limit.
 sql_alchemy_pool_size = 5
+
+# The maximum overflow size of the pool.
+# When the number of checked-out connections reaches the size set in pool_size,
+# additional connections will be returned up to this limit.
+# When those additional connections are returned to the pool, they are disconnected and discarded.
+# It follows then that the total number of simultaneous connections the pool will allow is pool_size + max_overflow,
+# and the total number of "sleeping" connections the pool will allow is pool_size.
+# max_overflow can be set to -1 to indicate no overflow limit;
+# no limit will be placed on the total number of concurrent connections. Defaults to 10.
+sql_alchemy_max_overflow = 10
 
 # The SqlAlchemy pool recycle is the number of seconds a connection
 # can be idle in the pool before it is invalidated. This config does
@@ -73,9 +119,10 @@ sql_alchemy_pool_size = 5
 # a lower config value will allow the system to recover faster.
 sql_alchemy_pool_recycle = 1800
 
-# How many seconds to retry re-establishing a DB connection after
-# disconnects. Setting this to 0 disables retries.
-sql_alchemy_reconnect_timeout = 300
+# Check connection at the start of each connection pool checkout.
+# Typically, this is a simple statement like “SELECT 1”.
+# More information here: https://docs.sqlalchemy.org/en/13/core/pooling.html#disconnect-handling-pessimistic
+sql_alchemy_pool_pre_ping = True
 
 # The schema to use for the metadata database
 # SqlAlchemy supports databases with the concept of multiple schemas.
@@ -92,10 +139,6 @@ dag_concurrency = 16
 # Are DAGs paused by default at creation
 dags_are_paused_at_creation = True
 
-# When not using pools, tasks are run in the "default pool",
-# whose size is guided by this config element
-non_pooled_task_slot_count = 128
-
 # The maximum number of active DAG runs per DAG
 max_active_runs_per_dag = 16
 
@@ -105,7 +148,7 @@ max_active_runs_per_dag = 16
 load_examples = True
 
 # Where your Airflow plugins are stored
-plugins_folder = /usr/local/airflow/plugins
+plugins_folder = {AIRFLOW_HOME}/plugins
 
 # Secret key to save connection passwords in the db
 fernet_key = $FERNET_KEY
@@ -113,8 +156,11 @@ fernet_key = $FERNET_KEY
 # Whether to disable pickling dags
 donot_pickle = False
 
-# How long before timing out a python file import while filling the DagBag
+# How long before timing out a python file import
 dagbag_import_timeout = 30
+
+# How long before timing out a DagFileProcessor, which processes a dag file
+dag_file_processor_timeout = 50
 
 # The class to use for running task instances in a subprocess
 task_runner = StandardTaskRunner
@@ -156,6 +202,17 @@ worker_precheck = False
 # When discovering DAGs, ignore any files that don't contain the strings `DAG` and `airflow`.
 dag_discovery_safe_mode = True
 
+# The number of retries each task is going to have by default. Can be overridden at dag or task level.
+default_task_retries = 0
+
+# Whether to serialises DAGs and persist them in DB.
+# If set to True, Webserver reads from DB instead of parsing DAG files
+# More details: https://airflow.apache.org/howto/enable-dag-serialization.html
+store_serialized_dags = False
+
+# Updating serialized DAG can not be faster than a minimum interval to reduce database write rate.
+min_serialized_dag_update_interval = 30
+
 [cli]
 # In what way should the cli access the API. The LocalClient will use the
 # database directly, while the json_client will use the api running on the
@@ -185,7 +242,7 @@ password =
 [operators]
 # The default owner assigned to each new operator, unless
 # provided explicitly or passed via `default_args`
-default_owner = Airflow
+default_owner = airflow
 default_cpus = 1
 default_ram = 512
 default_disk = 512
@@ -194,9 +251,6 @@ default_gpus = 0
 [hive]
 # Default mapreduce queue for HiveOperator tasks
 default_hive_mapred_queue =
-# Template for mapred_job_name in HiveOperator, supports the following named parameters:
-# hostname, dag_id, task_id, execution_date
-mapred_job_name_template = Airflow HiveOperator task for {hostname}.{dag_id}.{task_id}.{execution_date}
 
 [webserver]
 # The base url of your website as airflow cannot guess what domain or
@@ -247,7 +301,7 @@ error_logfile = -
 # This is only applicable for the flask-admin based web UI (non FAB-based).
 # In the FAB-based web UI with RBAC feature,
 # access to configuration is controlled by role permissions.
-expose_config = True
+expose_config = False
 
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
@@ -304,6 +358,17 @@ cookie_secure = False
 # Set samesite policy on session cookie
 cookie_samesite =
 
+# Default setting for wrap toggle on DAG code and TI log views.
+default_wrap = False
+
+# Send anonymous user activity to your analytics tool
+# analytics_tool = # choose from google_analytics, segment, or metarouter
+# analytics_id = XXXXXXXXXXX
+
+# Update FAB permissions and sync security manager roles
+# on webserver startup
+update_fab_perms = True
+
 [email]
 email_backend = airflow.utils.email.send_email_smtp
 
@@ -319,6 +384,11 @@ smtp_ssl = False
 # smtp_password = airflow
 smtp_port = 25
 smtp_mail_from = airflow@example.com
+
+[sentry]
+# Sentry (https://docs.sentry.io) integration
+sentry_dsn =
+
 
 [celery]
 # This section only applies if you are using the CeleryExecutor in
@@ -352,7 +422,7 @@ worker_log_server_port = 8793
 # a sqlalchemy database. Refer to the Celery documentation for more
 # information.
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#broker-settings
-broker_url = redis://redis:6379/1
+broker_url = sqla+mysql://airflow:airflow@localhost:3306/airflow
 
 # The Celery result_backend. When a job finishes, it needs to update the
 # metadata of the job. Therefore it will post a message on a message bus,
@@ -360,7 +430,7 @@ broker_url = redis://redis:6379/1
 # This status is used by the scheduler to update the state of the task
 # The use of a database is highly recommended
 # http://docs.celeryproject.org/en/latest/userguide/configuration.html#task-result-backend-settings
-result_backend = db+postgresql://airflow:airflow@postgres/airflow
+result_backend = db+mysql://airflow:airflow@localhost:3306/airflow
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it `airflow flower`. This defines the IP that Celery Flower runs on
@@ -393,6 +463,13 @@ ssl_active = False
 ssl_key =
 ssl_cert =
 ssl_cacert =
+
+# Celery Pool implementation.
+# Choices include: prefork (default), eventlet, gevent or solo.
+# See:
+#   https://docs.celeryproject.org/en/latest/userguide/workers.html#concurrency
+#   https://docs.celeryproject.org/en/latest/userguide/concurrency/eventlet.html
+pool = prefork
 
 [celery_broker_transport_options]
 # This section is for specifying options which can be passed to the
@@ -436,6 +513,13 @@ scheduler_heartbeat_sec = 5
 # -1 indicates to run continuously (see also num_runs)
 run_duration = -1
 
+# The number of times to try to schedule each DAG file
+# -1 indicates unlimited number
+num_runs = -1
+
+# The number of seconds to wait between consecutive DAG file processing
+processor_poll_interval = 1
+
 # after how much time (seconds) a new DAGs should be picked up from the filesystem
 min_file_process_interval = 0
 
@@ -447,7 +531,6 @@ print_stats_interval = 30
 
 # If the last scheduler heartbeat happened more than scheduler_health_check_threshold ago (in seconds),
 # scheduler is considered unhealthy.
-# This is used by the health check in the "/health" endpoint
 # This is used by the health check in the "/health" endpoint
 scheduler_health_check_threshold = 30
 
@@ -483,6 +566,11 @@ statsd_on = False
 statsd_host = localhost
 statsd_port = 8125
 statsd_prefix = airflow
+
+# If you want to avoid send all the available metrics to StatsD,
+# you can configure an allow list of prefixes to send only the metrics that
+# start with the elements of the list (e.g: scheduler,executor,dagrun)
+statsd_allow_list =
 
 # The scheduler can run multiple threads in parallel to schedule dags.
 # This defines how many threads will run.
@@ -570,10 +658,27 @@ api_rev = v3
 hide_sensitive_variable_fields = True
 
 [elasticsearch]
-elasticsearch_host =
-# we need to escape the curly braces by adding an additional curly brace
-elasticsearch_log_id_template = {dag_id}-{task_id}-{execution_date}-{try_number}
-elasticsearch_end_of_log_mark = end_of_log
+# Elasticsearch host
+host =
+# Format of the log_id, which is used to query for a given tasks logs
+log_id_template = {{dag_id}}-{{task_id}}-{{execution_date}}-{{try_number}}
+# Used to mark the end of a log stream for a task
+end_of_log_mark = end_of_log
+# Qualified URL for an elasticsearch frontend (like Kibana) with a template argument for log_id
+# Code will construct log_id using the log_id template from the argument above.
+# NOTE: The code will prefix the https:// automatically, don't include that here.
+frontend =
+# Write the task logs to the stdout of the worker, rather than the default files
+write_stdout = False
+# Instead of the default log formatter, write the log lines as JSON
+json_format = False
+# Log fields to also attach to the json output, if enabled
+json_fields = asctime, filename, lineno, levelname, message
+
+[elasticsearch_configs]
+
+use_ssl = False
+verify_certs = True
 
 [kubernetes]
 # The repository, tag and imagePullPolicy of the Kubernetes Image for the Worker to Run
@@ -630,6 +735,11 @@ env_from_secret_ref =
 git_repo =
 git_branch =
 git_subpath =
+
+# The specific rev or hash the git_sync init container will checkout
+# This becomes GIT_SYNC_REV environment variable in the git_sync init container for worker pods
+git_sync_rev =
+
 # Use git_user and git_password for user authentication or git_ssh_key_secret_name and git_ssh_key_secret_key
 # for SSH authentication
 git_user =
@@ -637,7 +747,7 @@ git_password =
 git_sync_root = /git
 git_sync_dest = repo
 # Mount point of the volume if git-sync is being used.
-# i.e. /root/airflow/dags
+# i.e. {AIRFLOW_HOME}/dags
 git_dags_folder_mount_point =
 
 # To get Git-sync SSH authentication set up follow this format
@@ -668,10 +778,25 @@ git_dags_folder_mount_point =
 git_ssh_key_secret_name =
 git_ssh_known_hosts_configmap_name =
 
+# To give the git_sync init container credentials via a secret, create a secret
+# with two fields: GIT_SYNC_USERNAME and GIT_SYNC_PASSWORD (example below) and
+# add `git_sync_credentials_secret = <secret_name>` to your airflow config under the kubernetes section
+#
+# Secret Example:
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: git-credentials
+# data:
+#   GIT_SYNC_USERNAME: <base64_encoded_git_username>
+#   GIT_SYNC_PASSWORD: <base64_encoded_git_password>
+git_sync_credentials_secret =
+
 # For cloning DAGs from git repositories into volumes: https://github.com/kubernetes/git-sync
 git_sync_container_repository = k8s.gcr.io/git-sync
 git_sync_container_tag = v3.1.1
 git_sync_init_container_name = git-sync-clone
+git_sync_run_as_user = 65533
 
 # The name of the Kubernetes service account to be associated with airflow workers, if any.
 # Service accounts are required for workers that require access to secrets or cluster resources.
@@ -707,6 +832,15 @@ affinity =
 # See:
 #   https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.12/#toleration-v1-core
 tolerations =
+
+# **kwargs parameters to pass while calling a kubernetes client core_v1_api methods from Kubernetes Executor
+# provided as a single line formatted JSON dictionary string.
+# List of supported params in **kwargs are similar for all core_v1_apis, hence a single config variable for all apis
+# See:
+#   https://raw.githubusercontent.com/kubernetes-client/python/master/kubernetes/client/apis/core_v1_api.py
+# Note that if no _request_timeout is specified, the kubernetes client will wait indefinitely for kubernetes
+# api responses, which will cause the scheduler to hang. The timeout is specified as [connect timeout, read timeout]
+kube_client_request_args = {{"_request_timeout" : [60,60] }}
 
 # Worker pods security context options
 # See:
@@ -756,3 +890,9 @@ fs_group =
 #
 # Additionally you may override worker airflow settings with the AIRFLOW__<SECTION>__<KEY>
 # formatting as supported by airflow normally.
+
+[kubernetes_labels]
+# The Key-value pairs to be given to worker pods.
+# The worker pods will be given these static labels, as well as some additional dynamic labels
+# to identify the task.
+# Should be supplied in the format: key = value
