--- a/docker-compose-LocalExecutor.yml
+++ b/docker-compose-LocalExecutor.yml
@@ -8,7 +8,7 @@ services:
             - POSTGRES_DB=airflow
 
     webserver:
-        image: odracci/docker-airflow:1.10.0rc1-1
+        image: odracci/docker-airflow:1.10.7
         restart: always
         depends_on:
             - postgres
